@@ -7,6 +7,7 @@ import java.time.LocalDate;
 import java.time.ZoneId;
 import java.time.ZonedDateTime;
 import java.time.temporal.ChronoUnit;
+import java.util.Base64;
 import java.util.Date;
 import java.util.UUID;
 
@@ -28,7 +29,6 @@ import cn.hutool.core.date.DateUnit;
 import io.jsonwebtoken.Jwts;
 import io.jsonwebtoken.SignatureAlgorithm;
 import lombok.extern.slf4j.Slf4j;
-import sun.misc.BASE64Decoder;
 
 /**
  * @author qingtian
@@ -108,7 +108,7 @@ public class JWTServiceImpl implements IJWTService {
     private PrivateKey getPrivateKey() throws Exception {
 
         PKCS8EncodedKeySpec priPKCS8 = new PKCS8EncodedKeySpec(
-                                                new BASE64Decoder().decodeBuffer(AuthorityConstant.PRIVATE_KEY));
+                                                Base64.getDecoder().decode(AuthorityConstant.PRIVATE_KEY));
         KeyFactory keyFactory = KeyFactory.getInstance("RSA");
         return keyFactory.generatePrivate(priPKCS8);
     }
